gospel/tests/negative/t2.mli

(*@ axiom a2: 1 = true *)

(* ERROR: type mismatch bool and integer *)
